<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordgameDemo</string>
    <string name="action_settings">Settings</string>
    <string name="GuessWord">GuessWord</string>
     <string name="Check">Check</string>
     <string name="Next">Next</string>
     <string name="tryAgain">tryAgain</string>
     <string name="hint">hint</string>
     <string name="EndGame">EndGame</string>
</resources>
